@@ -1,109 +1,224 @@
-<project name="com.mbeddr.core build and test" default="build">
-
-  <property file="../build.properties"/> 
-
-  <property name="jvm.arg.Xss" value="-Xss1024k"/>
-  <property name="jvm.arg.Xmx" value="-Xmx2048m"/>
-  <property name="jvm.arg.XX:MaxPermSize" value="-XX:MaxPermSize=128m"/>
+<project name="buildStubsModelPlugins" default="build">
+  <!-- Generated by MPS -->
+  <property name="build.dir" location="build" />
+  <property name="build.tmp" location="${build.dir}/tmp/buildStubsModelPlugins" />
+  <property name="build.layout" location="${build.dir}/artifacts/buildStubsModelPlugins" />
+  <property name="mps.home" location="${basedir}/../../../../../../Users/aquapp/AppData/Local/JetBrains/Toolbox/apps/MPS/ch-1/183.1458" />
+  <property name="mpsutil" location="${basedir}" />
+  <property name="artifacts.mps" location="${mps.home}" />
+  <property file="${artifacts.mps}/build.properties" prefix="import.mps" />
+  <property name="mps.build.number" value="${import.mps.mps.build.number}" />
+  <property name="mps.date" value="${import.mps.mps.date}" />
+  <property name="mps.build.vcs.number" value="${import.mps.mps.build.vcs.number}" />
+  <property name="mps.teamcity.buildConfName" value="${import.mps.mps.teamcity.buildConfName}" />
+  <property name="mps.idea.platform.build.number" value="${import.mps.mps.idea.platform.build.number}" />
+  <property name="mps.mps.build.counter" value="${import.mps.mps.mps.build.counter}" />
+  <property name="mpsBootstrapCore.version" value="${import.mps.mpsBootstrapCore.version}" />
+  <property name="environment" value="env" />
+  <property name="env.JAVA_HOME" value="${java.home}/.." />
+  <property name="jdk.home" value="${env.JAVA_HOME}" />
+  <property name="mps.generator.skipUnmodifiedModels" value="false" />
   
-  <!-- validate if path properties are set in build.properties -->
-  <fail unless="mbeddr.github.core.home">mbeddr.github.core.home must be set in your build.properties</fail>
-  <fail unless="mps.platform.caches">mps.platform.caches must be set in your build.properties</fail>
-  <fail unless="mps.home">mps.home must be set in your build.properties</fail>
+  <path id="path.mps.ant.path">
+    <pathelement location="${artifacts.mps}/lib/ant/lib/ant-mps.jar" />
+    <pathelement location="${artifacts.mps}/lib/jdom.jar" />
+    <pathelement location="${artifacts.mps}/lib/log4j.jar" />
+  </path>
   
-  <path id="mps.ant.path">
-   <pathelement location="${mps.home}/lib/mps-backend.jar"/>
-   <pathelement location="${mps.home}/lib/jdom.jar"/>
-   <pathelement location="${mps.home}/lib/log4j.jar"/>
-   <pathelement location="${mps.home}/lib/mps-core.jar"/>
- </path>
- 
- <taskdef resource="jetbrains/mps/build/ant/antlib.xml"
-          classpathref="mps.ant.path"/>
-
-  <property name="util.project.dir" value="code/languages/com.mbeddr.mpsutil"/>
-  <property name="util.project.mpr" value="code/languages/com.mbeddr.mpsutil/mpsutil.dev.mpr"/>
-
-    <jvmargs id="myargs">
-      <arg value="-ea"/>
-      <arg value="${jvm.arg.Xss}"/>
-      <arg value="${jvm.arg.Xmx}"/>
-      <arg value="${jvm.arg.XX:MaxPermSize}"/>
-      <arg value="-XX:+HeapDumpOnOutOfMemoryError"/>
-      <arg value="-Didea.system.path=${mps.platform.caches}/system"/>
-      <arg value="-Didea.config.path=${mps.platform.caches}/config"/>
-      <arg value="-Didea.plugins.path=${mps.platform.caches}/plugins"/>
-  </jvmargs>
-
-  <target name="init">
-      <delete dir="${mps.platform.caches}"/>
-      <mkdir dir="${mps.platform.caches}"/>
-  </target>
-  
-  <target name="build">
-    <antcall target="build-languages"/>
-  </target>
-  
-  <target name="delete-mps-generated-code" >
-      <delete includeemptydirs="true">
-      <fileset dir="${mbeddr.github.core.home}/${util.project.dir}" defaultexcludes="false">
-         <include name="**/source_gen/**" />
-         <include name="**/source_gen.caches/**" />
-         <include name="**/classes_gen/**" />
-      </fileset>
-    </delete>
-  </target>
-  
-  <target name="build-tests" depends="init">
-    <mps.generate parallelMode="false" fork="true">
-      <macro name="mbeddr.github.core.home" path="${mbeddr.github.core.home}"/>
-      <jvmargs refid="myargs"/>      
-      <macro name="mbeddr.github.core.home" path="${mbeddr.github.core.home}"/>     
-      <library name="util.project" dir="${mbeddr.github.core.home}/${util.project.dir}"/>           
-      <modules dir="${mbeddr.github.core.home}/${util.project.dir}/tests"/>
-    </mps.generate>
-  </target>
-  
-  <target name="run-ts-tests" >
-    
-    <echo message="mbeddr.github.core.home = ${mbeddr.github.core.home}"/>
-    <echo message="path.macro.mbeddr.github.core.home := ${mbeddr.github.core.home}"/>
-    <echo message="mps.home := ${mps.home}"/>
-    
-    <junit haltonfailure="true" showoutput="true" fork="true" dir="${mps.home}">
-      <jvmarg value="-ea"/>
-      <jvmarg value="-Xss1024k"/>
-      <jvmarg value="-Xmx1024m"/>
-      <jvmarg value="-XX:MaxPermSize=256m"/>
-      <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError"/>
-      <jvmarg value="-XX:-UseGCOverheadLimit"/>
+  <target name="assemble" depends="declare-mps-tasks, classes">
+    <mkdir dir="${build.layout}/JsonStubModel.plugin" />
+    <mkdir dir="${build.layout}/JsonStubModel.plugin/META-INF" />
+    <echoxml file="${build.layout}/JsonStubModel.plugin/META-INF/plugin.xml">
+      <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
+        <id>JsonStubModel.plugin</id>
+        <name>JsonStubModel.plugin</name>
+        <description>Plugin supporting stub models for external json files</description>
+        <version>1.0</version>
+        <depends>jetbrains.mps.core</depends>
+        <extensions defaultExtensionNs="com.intellij">
+          <mps.modelRootFactory rootType="json_stubs" className="com.mbeddr.mpsutil.json.stubs.plugin.runtime.JsonStubsModelRootFactory" />
+          <mps.modelRootEntry rootType="json_stubs" className="com.mbeddr.mpsutil.json.stubs.plugin.runtime.JsonStubsModelRootEntryFactory" />
+        </extensions>
         
-      <sysproperty key="idea.load.plugins" value="true"/>
-      <sysproperty key="idea.system.path" value="${mps.platform.caches}/system"/>
-      <sysproperty key="idea.config.path" value="${mps.platform.caches}/config"/>
-      <sysproperty key="idea.plugins.path" value="${mps.platform.caches}/plugins"/>       
-      <sysproperty key="mps.junit.pathmacro.mbeddr.github.core.home" value="${mbeddr.github.core.home}"/>
-      <sysproperty key="mps.junit.project" value="${mbeddr.github.core.home}/${util.project.mpr}"/>
-
-      <classpath>
-        <fileset dir="${mps.home}/lib">
-          <include name="**/*.jar"/>
-        </fileset>
-        <fileset dir="${mps.home}/plugins">
-          <include name="**/*.jar"/>
-        </fileset>
-      </classpath>
-
-      <test name="jetbrains.mps.testbench.junit.suites.DefaultTestSuite"/>
-      <formatter type="xml"/>
-    </junit>
+        <extensions defaultExtensionNs="com.intellij">
+          <mps.LanguageLibrary dir="/languages" />
+        </extensions>
+      </idea-plugin>
+    </echoxml>
+    <mkdir dir="${build.layout}/JsonStubModel.plugin/lib" />
+    <mkdir dir="${build.tmp}/default/com.mbeddr.mpsutil.json.stubs.plugin.jar" />
+    <mkdir dir="${build.tmp}/default/com.mbeddr.mpsutil.json.stubs.plugin.jar/META-INF" />
+    <echoxml file="${build.tmp}/default/com.mbeddr.mpsutil.json.stubs.plugin.jar/META-INF/module.xml">
+      <module namespace="com.mbeddr.mpsutil.json.stubs.plugin" type="solution" uuid="2004a4cd-c5aa-4be4-b80b-18e7c9722c16">
+        <dependencies>
+          <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" />
+          <module ref="4c6a28d1-2c60-478d-b36e-db9b3cbb21fb(closures.runtime)" />
+          <module ref="9b80526e-f0bf-4992-bdf5-cee39c1833f3(collections.runtime)" />
+          <module ref="52b81ac7-93fd-4e9e-b972-4995882da6d4(jetbrains.mps.baseLanguage.references.runtime)" />
+        </dependencies>
+        <classpath>
+          <entry path="." />
+        </classpath>
+        <sources jar="com.mbeddr.mpsutil.json.stubs.plugin-src.jar" descriptor="com.mbeddr.mpsutil.json.stubs.plugin.msd" />
+      </module>
+    </echoxml>
+    <jar destfile="${build.layout}/JsonStubModel.plugin/lib/com.mbeddr.mpsutil.json.stubs.plugin.jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/java/out/com.mbeddr.mpsutil.json.stubs.plugin" />
+      <fileset dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${build.tmp}/default/com.mbeddr.mpsutil.json.stubs.plugin.jar" />
+    </jar>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-com.mbeddr.mpsutil.json.stubs.plugin-models">
+      <fileset dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
+    </copyModels>
+    <jar destfile="${build.layout}/JsonStubModel.plugin/lib/com.mbeddr.mpsutil.json.stubs.plugin-src.jar" duplicate="preserve">
+      <fileset dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen">
+        <exclude name="**/trace.info" />
+        <exclude name="**/exports" />
+        <exclude name="**/checkpoints" />
+        <exclude name="**/*.mps" />
+      </fileset>
+      <zipfileset file="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/com.mbeddr.mpsutil.json.stubs.plugin.msd" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-com.mbeddr.mpsutil.json.stubs.plugin-models" prefix="module/models" />
+    </jar>
+    <echo file="${build.layout}/build.properties">mps.build.number=${mps.build.number}${line.separator}mps.date=${mps.date}${line.separator}mps.build.vcs.number=${mps.build.vcs.number}${line.separator}mps.teamcity.buildConfName=${mps.teamcity.buildConfName}${line.separator}mps.idea.platform.build.number=${mps.idea.platform.build.number}${line.separator}mps.mps.build.counter=${mps.mps.build.counter}${line.separator}mpsBootstrapCore.version=${mpsBootstrapCore.version}</echo>
   </target>
   
-  <target name="build-languages" depends="init">
-    <mps.generate parallelMode="true" fork="true">
-      <jvmargs refid="myargs"/>
-      <modules dir="${mbeddr.github.core.home}/${util.project.dir}/languages"/>
-    </mps.generate>
+  <target name="buildDependents" />
+  
+  <target name="fetchDependencies" />
+  
+  <target name="build" depends="assemble" />
+  
+  <target name="clean">
+    <delete dir="${build.tmp}" />
+    <delete dir="${build.layout}" />
   </target>
-
+  
+  <target name="generate" depends="declare-mps-tasks, fetchDependencies">
+    <echo message="generating" />
+    <generate strictMode="true" parallelMode="true" parallelThreads="4" useInplaceTransform="true" hideWarnings="false" createStaticRefs="true" fork="true" targetJavaVersion="1.8" skipUnmodifiedModels="${mps.generator.skipUnmodifiedModels}">
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.blTypes.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.classifiers.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.closures.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.collections.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.extensionMethods.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.javadoc.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jdk7.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.regexp.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.regexp.runtime.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.scopes.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.tuples.jar" />
+      <library file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguageInternal.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.baseLanguage.lightweightdsl.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.actions.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.behavior.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.checkedName.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.constraints.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.core.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.dataFlow.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.editor.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.findUsages.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.generator.generationContext.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.generator.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.intentions.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.migration.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.migration.runtime.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.modelapi.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.pattern.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.plugin.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.project.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.quotation.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.refactoring.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.resources.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.scopes.runtime.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.script.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.sharedConcepts.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.smodel.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.smodel.query.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.structure.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.textGen.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.typesystem.jar" />
+      <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.refactoring.participant.jar" />
+      <library file="${artifacts.mps}/lib/mps-behavior-api.jar" />
+      <library file="${artifacts.mps}/lib/mps-closures.jar" />
+      <library file="${artifacts.mps}/lib/mps-collections.jar" />
+      <library file="${artifacts.mps}/lib/mps-core.jar" />
+      <library file="${artifacts.mps}/lib/mps-editor.jar" />
+      <library file="${artifacts.mps}/lib/mps-openapi.jar" />
+      <library file="${artifacts.mps}/lib/mps-platform.jar" />
+      <library file="${artifacts.mps}/lib/mps-references.jar" />
+      <library file="${artifacts.mps}/lib/mps-tuples.jar" />
+      <chunk>
+        <module file="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/com.mbeddr.mpsutil.json.stubs.plugin.msd" />
+      </chunk>
+      <jvmargs>
+        <arg value="-Xmx4048m" />
+      </jvmargs>
+      <macro name="mps.home" path="${mps.home}" />
+      <macro name="mpsutil" path="${mpsutil}" />
+    </generate>
+  </target>
+  
+  <target name="declare-mps-tasks">
+    <taskdef resource="jetbrains/mps/build/ant/antlib.xml" classpathref="path.mps.ant.path" />
+  </target>
+  
+  <target name="makeDependents" />
+  
+  <target name="compileJava" depends="java.compile.com.mbeddr.mpsutil.json.stubs.plugin" />
+  
+  <target name="processResources" />
+  
+  <target name="classes" depends="compileJava, processResources" />
+  
+  <target name="test" depends="classes" />
+  
+  <target name="check" depends="test" />
+  
+  <target name="java.compile.com.mbeddr.mpsutil.json.stubs.plugin" depends="fetchDependencies">
+    <mkdir dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen" />
+    <mkdir dir="${build.tmp}/java/out/com.mbeddr.mpsutil.json.stubs.plugin" />
+    <javac destdir="${build.tmp}/java/out/com.mbeddr.mpsutil.json.stubs.plugin" fork="false" encoding="utf8" includeantruntime="false" debug="true" source="1.8" target="1.8">
+      <compilerarg value="-Xlint:none" />
+      <src>
+        <path location="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen" />
+      </src>
+      <classpath>
+        <fileset file="${artifacts.mps}/lib/mps-closures.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-collections.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-annotations.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-openapi.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-core.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-logging.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-tuples.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-references.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-behavior-api.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-behavior-runtime.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-messaging.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-boot-util.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-editor.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-editor-api.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-editor-runtime.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-platform.jar" />
+        <fileset file="${artifacts.mps}/lib/mps-environment.jar" />
+        <fileset file="${artifacts.mps}/lib/annotations.jar" />
+        <fileset file="${artifacts.mps}/lib/log4j.jar" />
+        <fileset file="${artifacts.mps}/lib/jdom.jar" />
+        <fileset file="${artifacts.mps}/lib/trove4j.jar" />
+        <fileset file="${artifacts.mps}/lib/ecj-4.7.2.jar" />
+        <fileset dir="${artifacts.mps}/lib" includes="*.jar" />
+      </classpath>
+    </javac>
+    <copy todir="${build.tmp}/java/out/com.mbeddr.mpsutil.json.stubs.plugin">
+      <fileset dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen">
+        <include name="**/*.info" />
+      </fileset>
+    </copy>
+  </target>
+  
+  <target name="cleanSources">
+    <delete dir="${mpsutil}/solutions/com.mbeddr.mpsutil.json.stubs.plugin/source_gen" />
+  </target>
 </project>
